refactor: reorganize font imports into separate CSS files for improved structure and maintainability

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import './styles/index.css';
 :root {
   font-family: Inter;
   overflow: hidden;
