--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,17 @@ input[type='number'] {
   -webkit-mask-position: center;
   background-color: currentColor; /* To show the icon color */
 }
+.sidemenu-menu-icon-pil {
+  mask-image: url(/icons/pill.svg);
+  -webkit-mask-image: url(/icons/pill.svg);
+  mask-size: 100%;
+  -webkit-mask-size: 100%;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: currentColor; /* To show the icon color */
+}
 .sidemenu-menu-icon-home {
   mask-image: url(/icons/side-menu/home-2.svg);
   -webkit-mask-image: url(/icons/side-menu/home-2.svg);
