adding other library

--- a/src/index.css
+++ b/src/index.css
@@ -327,6 +327,17 @@ input[type='number'] {
   -webkit-mask-position: center;
   background-color: currentColor; /* To show the icon color */
 }
+.sidemenu-menu-icon-Other {
+  mask-image: url(/icons/side-menu/other-outline.svg);
+  -webkit-mask-image: url(/icons/side-menu/other-outline.svg);
+  mask-size: 100%;
+  -webkit-mask-size: 100%;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: currentColor; /* To show the icon color */
+}
 /* .report-side-menu-layer-icon{
   mask-image: url('/public//icons//menu.svg');
   mask-size: 100%;
